<package>
  <name>rviz_amrl_msgs_visualization</name>
  <version>0.0.1</version>
  <description>
    Visualize AMRL messages in RViz.
  </description>
  <maintainer email="joydeepb@cs.utexas.edu">Joydeep Biswas</maintainer>
  <license>MIT</license>

  <url>http://ros.org/wiki/foo_core</url>
  <author email="joydeepb@cs.utexas.edu">Joydeep Biswas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>amrl_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>amrl_msgs</run_depend>
</package>

